# my_arithmetic_joackim

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  main.yml
docs/: conf.py  index.rst  pgcd.rst
docs/_build/doctrees/: environment.pickle  index.doctree  pgcd.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pgcd.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/my_arithmetic_joackim/: pgcd.html
docs/_build/html/_sources/: index.rst.txt  pgcd.rst.txt
docs/_static/doctrees/: environment.pickle
docs/_static/html/: genindex.html  index.html  objects.inv  searchindex.js
my_arithmetic_joackim/: __init__.py  pgcd.py
tests/: test_pgcd.py
