[tool.poetry]
name = "my-arithmetic-joackim"
version = "0.1.0"
description = ""
authors = ["Joackim PIAUD <joackim.piaud@etudiant.univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "*"
tox = "*"
coverage = "*"
poetry-dynamic-versioning = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "v(?P<base>\\d+(\\.\\d+){0,2})"