[tool.poetry]
name = "my-arithmetic-joackim"
version = "0.1.0"
description = ""
authors = ["Joackim PIAUD <joackim.piaud@etudiant.univ-lr.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "*"
tox = "*"
coverage = "*"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "v(?P<base>\\d+(\\.\\d+){0,2})"